MB-38390: Make enable_expiry_opcode respect includeDeleteTime

Issue first seen during upgrade. Because of the mixed-level cluster,
the includeDeleteTime flag is not set at dcpOpen. However, the
DcpConsumer still sends the "enable_expiry_opcode" control message.

Because using the expiry opcode relies on the V2 delete (which includes
the delete time), this erroneously set includeDeleteTime=Yes in the
DcpProducer, causing it to send V2 deletes. This lead to inconsistency;
both the consumer and producer connection objects still have
includeDeleteTime=No.

Because of this, the consumer dcp_deletion_validator expects a V1
delete, and rejects the V2 deletes sent by the DcpProducer, causing the
replication stream to be torn down.

Fixed by making "enable_expiry_opcode" silently fail if
includeDeleteTime==No.

Change-Id: I4bc2fa2ac9e94e136dd4bc24e14533cd4bb4edb5
Reviewed-on: http://review.couchbase.org/124159
Tested-by: Build Bot <build@couchbase.com>
Tested-by: James Harrison <james.harrison@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>
Well-Formed: Wayne Siu <wayne@couchbase.com>
Well-Formed: Build Bot <build@couchbase.com>