tests/testapp_cluster/clustertest.cc
@@ -24,6 +24,8 @@
 
 std::unique_ptr<cb::test::Cluster> cb::test::ClusterTest::cluster;
 
+std::shared_ptr<cb::test::Bucket> cb::test::UpgradeTest::bucket;
+
 void cb::test::ClusterTest::SetUpTestCase() {
     cluster = Cluster::create(4);
     if (!cluster) {
@@ -71,4 +73,26 @@ void cb::test::ClusterTest::getReplica(MemcachedConnection& conn,
         rsp = conn.execute(cmd);
     } while (rsp.getStatus() == cb::mcbp::Status::KeyEnoent);
     EXPECT_TRUE(rsp.isSuccess());
+}
+
+void cb::test::UpgradeTest::SetUpTestCase() {
+    // Can't just use the ClusterTest::SetUp as we need to prevent it from
+    // creating replication streams so that we can create them as we like to
+    // mock upgrade scenarios.
+    cluster = Cluster::create(3);
+    if (!cluster) {
+        std::cerr << "Failed to create the cluster" << std::endl;
+        std::exit(EXIT_FAILURE);
+    }
+
+    try {
+        bucket = cluster->createBucket(
+                "default",
+                {{"replicas", 2}, {"max_vbuckets", 1}, {"max_num_shards", 1}},
+                {},
+                false /*No replication*/);
+    } catch (const std::runtime_error& error) {
+        std::cerr << error.what();
+        std::exit(EXIT_FAILURE);
+    }
 }
